<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taxi7"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/book_a_trip_tit_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Book_a_Trip_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/Destination_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/Destination_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="22sp"
        android:typeface="monospace"
        />


    <Spinner

        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/desArray"
        android:id="@+id/spinner_ip"
        android:spinnerMode="dropdown"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/NumberOfpassTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number_of_passengers_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="22sp"
        android:typeface="monospace"
        />

    <Spinner
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner_Number_of_pass"
        android:spinnerMode="dropdown"
        android:entries="@array/passArray"
        />

    <TextView
        android:id="@+id/dATEtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="22sp"
        android:typeface="monospace"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DatePick"
        android:clickable="true"
        android:editable="false"
        android:hint="@string/Date_str"
        android:textColor="#000"
        android:focusable="false"
        android:textColorHint="#000"/>



    <Button
        android:layout_marginTop="120dp"
        android:id="@+id/ordertrip_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Book_a_Texi_str" />

</LinearLayout>