<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clock"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Wake_up_call_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:layout_marginTop="240dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="22sp"
        android:typeface="monospace"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DatePick"
        android:clickable="true"
        android:editable="false"
        android:hint="@string/Date_str"
        android:textColor="#000"
        android:focusable="false"
        android:textColorHint="#fff"/>

    <TextView
        android:id="@+id/TimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_time_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="22sp"
        android:typeface="monospace" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_view_edit"
        android:hint="20:00"
        android:text="20:00"
        android:editable="false"
        android:focusable="false"
        android:textColorHint="#fff"
        android:textColor="#fff"
        />


    <Button
        android:id="@+id/wakeupbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wakeUp_call_str" />

</LinearLayout>