<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#5fb0c9"
android:orientation="vertical"
android:scrollbarAlwaysDrawVerticalTrack="true">

<TextView
    android:id="@+id/login_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="22dp"
    android:gravity="center_horizontal"
    android:text="@string/signup_title_str"
    android:textColor="#fff"
    android:textSize="26sp"
    android:textStyle="bold" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="50dp"
    android:background="#fff"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_alignTop="@+id/user_profile_photo"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/roomNumInput"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/keyicon"
                android:drawableTint="#000"
                android:singleLine="true"
                android:hint="@string/username_str"
                android:gravity="left"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:gravity="left"
                android:drawableLeft="@drawable/passicon"
                android:drawableTint="#000"
                android:hint="@string/password_str"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/signinBT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:background="#d67601"
            android:text="@string/signup_bt_str"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>

<ImageButton
    android:id="@+id/user_profile_photo"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_below="@+id/login_title"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:background="@drawable/user_profile_image_background"
    android:elevation="4dp"
    android:src="@drawable/home"
   />
</RelativeLayout>